Fixed spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -2696,10 +2696,13 @@ footer .copyright span:last-child::after {
 
 .fiverr-btn {
   background: #1dbf73;
-  display: inline;
-  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  padding: 10px;
   font-size: 20px;
-  margin-top: 10px;
+  margin-top: 15px;
   border-radius: 10px;
   color: #fff !important;
 }
